name:                url-shortener
version:             0.1.0.0
synopsis:            URL Shortener
homepage:            http://github.com/justincampbell/url-shortener-haskell
license:             MIT
license-file:        LICENSE
author:              Justin Campbell
maintainer:          justin@justincampbell.me
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable url-shortener
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 4.8,
                       binary,
                       bytestring,
                       containers,
                       global-variables,
                       http-types,
                       text,
                       wai,
                       wai-extra,
                       warp

library
  build-depends:       base >=4.7 && <4.8,
                       containers
  exposed-modules:     Shortener

test-suite spec
  main-is: Spec.hs
  type: exitcode-stdio-1.0
  build-depends:       base >= 4.7 && < 4.8,
                       containers,
                       url-shortener,
                       hspec >= 1.1,
                       QuickCheck
