name:                url-shortener
version:             0.1.0.0
synopsis:            URL Shortener
description:         URL Shortener
homepage:            http://github.com/justincampbell/url-shortener-haskell
license:             MIT
license-file:        LICENSE
author:              Justin Campbell
maintainer:          justin@justincampbell.me
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  location: http://github.com/justincampbell/url-shortener-haskell
  type: git

executable url-shortener
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 4.8,
                       binary,
                       bytestring,
                       containers,
                       global-variables,
                       http-types,
                       text,
                       wai,
                       wai-extra,
                       warp

library
  default-language:    Haskell2010
  build-depends:       base >=4.7 && <4.8,
                       binary,
                       bytestring,
                       containers,
                       global-variables,
                       http-types,
                       text,
                       wai,
                       wai-extra,
                       warp

  exposed-modules:     Shortener


test-suite spec
  main-is: Spec.hs
  type: exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base >=4.7 && <4.8,
                       containers,
                       url-shortener,
                       hspec
